# maemo-call-forward

./: Makefile.am  call-forward.c  call-forward.desktop.in.in  configure.ac  net.uk.cobb.call_forward.service.in
call-forward/trunk/: Makefile.am  call-forward-icon.xcf  call-forward.c  configure.ac  net.uk.cobb.call-forward.service.in
call-forward/trunk/debian/: README  call-forward.default.ex  manpage.xml.ex  postrm.ex  prerm.ex  rules
call-forward/trunk/po/: POTFILES.in
debian/: README.Debian  call-forward.doc-base.EX  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  menu.ex  postinst.ex  preinst.ex  rules  watch.ex
